--- a/portfolio.html
+++ b/portfolio.html
@@ -77,111 +77,111 @@
         </ul>
         <ul class="list">
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/banking.jpg"
                 alt="application-interface"
                 width="360"
                 height="300"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="adv-first-head">Banking App Interface Concept</h2>
+              <p class="adv-text">App</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/cashless.jpg"
                 alt="cashless-payment"
                 width="360"
                 height="300"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="adv-first-head">Cashless Payment</h2>
+              <p class="adv-text">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/app.jpg"
                 alt="laptop-with-open-app"
                 width="360"
                 height="300"
               />
-              <h2>Meditation App</h2>
-              <p>App</p>
+              <h2 class="adv-first-head">Meditation App</h2>
+              <p class="adv-text">App</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/taxi.jpg"
                 alt="man-handling-the-wheel"
                 width="360"
                 height="300"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="adv-first-head">Taxi Service</h2>
+              <p class="adv-text">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/screen.jpg"
                 alt="screen-illustrations"
                 width="360"
                 height="300"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="adv-first-head">Screen Illustrations</h2>
+              <p class="adv-text">Design</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/online.jpg"
                 alt="girl-using-a-phone"
                 width="360"
                 height="300"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="adv-first-head">Online Courses</h2>
+              <p class="adv-text">Marketing</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/instagram.jpg"
                 alt="instagram-stories"
                 width="360"
                 height="300"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="adv-first-head">Instagram Stories Concept</h2>
+              <p class="adv-text">Design</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/food.jpg"
                 alt="girl-carring-a-bag-with-food"
                 width="360"
                 height="300"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="adv-first-head">Organic Food</h2>
+              <p class="adv-text">Web Site</p>
             </a>
           </li>
           <li class="link">
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/coffee.jpg"
                 alt="man-making-a-coffee"
                 width="360"
                 height="300"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="adv-first-head">Fresh Coffee</h2>
+              <p class="adv-text">Web Site</p>
             </a>
           </li>
         </ul>
