--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,6 @@
       <!-- /ADDRESS -->
     </header>
     <!-- HEADER -->
-    <!-- SECTION-FILTER -->
-    <!-- /SECTION-FILTER -->
     <!-- SECTION-MAIN -->
     <main>
       <section class="filter">
@@ -75,8 +73,8 @@
             <button type="button" class="secondary-btn">Marketing</button>
           </li>
         </ul>
-        <ul class="list">
-          <li class="link">
+        <ul class="Privileges list">
+          <li class="privileges-link link">
             <a href="" class="link">
               <img
                 src="./images/banking.jpg"
@@ -84,11 +82,13 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Banking App Interface Concept</h2>
-              <p class="adv-text">App</p>
+              <h2 class="privileges-head adv-first-head">
+                Banking App Interface Concept
+              </h2>
+              <p class="priviliges-text adv-text">App</p>
             </a>
           </li>
-          <li class="link">
+          <li class="privileges-list link">
             <a href="" class="link">
               <img
                 src="./images/cashless.jpg"
@@ -96,11 +96,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Cashless Payment</h2>
-              <p class="adv-text">Marketing</p>
+              <h2 class="privileges-head adv-first-head">Cashless Payment</h2>
+              <p class="priviliges-text adv-text">Marketing</p>
             </a>
           </li>
-          <li class="link">
+          <li class="privileges-list link">
             <a href="" class="link">
               <img
                 src="./images/app.jpg"
@@ -108,11 +108,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Meditation App</h2>
-              <p class="adv-text">App</p>
+              <h2 class="privileges-head adv-first-head">Meditation App</h2>
+              <p class="priviliges-text adv-text">App</p>
             </a>
           </li>
-          <li class="link">
+          <li class="privileges-list link">
             <a href="" class="link">
               <img
                 src="./images/taxi.jpg"
@@ -120,11 +120,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Taxi Service</h2>
-              <p class="adv-text">Marketing</p>
+              <h2 class="privileges-head adv-first-head">Taxi Service</h2>
+              <p class="priviliges-text adv-text">Marketing</p>
             </a>
           </li>
-          <li class="link">
+          <li class="privileges-list link">
             <a href="" class="link">
               <img
                 src="./images/screen.jpg"
@@ -132,11 +132,13 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Screen Illustrations</h2>
-              <p class="adv-text">Design</p>
+              <h2 class="privileges-head adv-first-head">
+                Screen Illustrations
+              </h2>
+              <p class="priviliges-text adv-text">Design</p>
             </a>
           </li>
-          <li class="link">
+          <li class="privileges-list link">
             <a href="" class="link">
               <img
                 src="./images/online.jpg"
@@ -144,11 +146,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Online Courses</h2>
-              <p class="adv-text">Marketing</p>
+              <h2 class="privileges-head adv-first-head">Online Courses</h2>
+              <p class="priviliges-text adv-text">Marketing</p>
             </a>
           </li>
-          <li class="link">
+          <li class="privileges-list link">
             <a href="" class="link">
               <img
                 src="./images/instagram.jpg"
@@ -156,11 +158,13 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Instagram Stories Concept</h2>
-              <p class="adv-text">Design</p>
+              <h2 class="privileges-head adv-first-head">
+                Instagram Stories Concept
+              </h2>
+              <p class="priviliges-text adv-text">Design</p>
             </a>
           </li>
-          <li class="link">
+          <li class="privileges-list link">
             <a href="" class="link">
               <img
                 src="./images/food.jpg"
@@ -168,11 +172,11 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Organic Food</h2>
-              <p class="adv-text">Web Site</p>
+              <h2 class="privileges-head adv-first-head">Organic Food</h2>
+              <p class="priviliges-text adv-text">Web Site</p>
             </a>
           </li>
-          <li class="link">
+          <li class="privileges-list link">
             <a href="" class="link">
               <img
                 src="./images/coffee.jpg"
@@ -180,8 +184,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="adv-first-head">Fresh Coffee</h2>
-              <p class="adv-text">Web Site</p>
+              <h2 class="privileges-head adv-first-head">Fresh Coffee</h2>
+              <p class="priviliges-text adv-text">Web Site</p>
             </a>
           </li>
         </ul>
