final update homework 1-2, minor fixes with classes

--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
         <a href="./index.html" class="logo link"
           >Web<span class="logo-header">Studio</span></a
         >
-        <ul class="list">
-          <li class="list link">
+        <ul class="nav list">
+          <li class="nav-list">
             <a href="./index.html" class="nav link">Studio</a>
           </li>
-          <li class="list link">
+          <li class="nav-list">
             <a href="./portfolio.html" class="nav link">Portfolio</a>
           </li>
-          <li class="list link">
+          <li class="nav-list">
             <a href="" class="nav link">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- /NAVIGATION -->
       <!-- ADDRESS -->
-      <address class="contact-links">
-        <ul class="list">
-          <li class="contact-list">
-            <a href="mailto:info@devstudio.com" class="contacts link"
+      <address class="contact-address">
+        <ul class="address list">
+          <li class="address-list">
+            <a href="mailto:info@devstudio.com" class="contact link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact-list">
-            <a href="tel:+110001111111" class="contacts link"
+          <li class="address-list">
+            <a href="tel:+110001111111" class="contact link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -63,31 +63,31 @@
       <!-- SECTION-ADVANTAGES #2 -->
       <section class="advantages">
         <h2 class="adv-head">Advantages</h2>
-        <ul class="list">
+        <ul class="adv list">
           <li class="adv-list">
-            <h3 class="adv-first-head">Strategy</h3>
-            <p class="adv-text">
+            <h3 class="adv-mainhead main-head">Strategy</h3>
+            <p class="adv-text main-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="adv-list">
-            <h3 class="adv-first-head">Punctuality</h3>
-            <p class="adv-text">
+            <h3 class="adv-main-head main-head">Punctuality</h3>
+            <p class="adv-text main-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="adv-list">
-            <h3 class="adv-first-head">Diligence</h3>
-            <p class="adv-text">
+            <h3 class="adv-main-head main-head">Diligence</h3>
+            <p class="adv-text main-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="adv-list">
-            <h3 class="adv-first-head">Technologies</h3>
-            <p class="adv-text">
+            <h3 class="adv-main-head main-head">Technologies</h3>
+            <p class="adv-text main-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -98,8 +98,8 @@
       <!-- SECTION-FEATURES #3 -->
       <section class="features">
         <h2 class="features-head">What are we doing</h2>
-        <ul class="list">
-          <li class="list">
+        <ul class="feat list">
+          <li class="feat-list">
             <img
               src="./images/pc.jpg"
               alt="personal computer"
@@ -108,7 +108,7 @@
             />
           </li>
 
-          <li class="list">
+          <li class="feat-list">
             <img
               src="./images/smartphones.jpg"
               alt="smartphones"
@@ -116,7 +116,7 @@
               height="300"
             />
           </li>
-          <li class="list">
+          <li class="feat-list">
             <img
               src="./images/pcwithsmartphones.jpg"
               alt="smartphones with personal computer"
@@ -130,8 +130,8 @@
       <!-- SECTION-TEAM #4 -->
       <section class="team">
         <h2 class="team-head">Our Team</h2>
-        <ul class="list team-back">
-          <li class="list">
+        <ul class="team-back list">
+          <li class="team-list">
             <img
               src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
@@ -141,7 +141,7 @@
             <h3 class="team-first-head">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li class="list">
+          <li class="team-list">
             <img
               src="./images/tomford.jpg"
               alt="Tom Ford"
@@ -151,7 +151,7 @@
             <h3 class="team-first-head">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li class="list">
+          <li class="team-list">
             <img
               src="./images/camilagarcia.jpg"
               alt="mCamila Garcia"
@@ -161,7 +161,7 @@
             <h3 class="team-first-head">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li class="list">
+          <li class="team-list">
             <img
               src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
