--- a/portfolio.html
+++ b/portfolio.html
@@ -21,29 +21,29 @@
         <a href="./index.html" class="logo link"
           >Web<span class="logo-header">Studio</span></a
         >
-        <ul class="list">
-          <li class="list link">
+        <ul class="nav list">
+          <li class="nav-list">
             <a href="./index.html" class="nav link">Studio</a>
           </li>
-          <li class="list link">
+          <li class="nav-list">
             <a href="./portfolio.html" class="nav link">Portfolio</a>
           </li>
-          <li class="list link">
+          <li class="nav-list">
             <a href="" class="nav link">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- /NAVIGATION -->
       <!-- ADDRESS -->
-      <address class="contact-links">
-        <ul class="list">
-          <li class="contact-list">
-            <a href="mailto:info@devstudio.com" class="contacts link"
+      <address class="contact-address">
+        <ul class="address list">
+          <li class="address-list">
+            <a href="mailto:info@devstudio.com" class="contact link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="contact-list">
-            <a href="tel:+110001111111" class="contacts link"
+          <li class="address-list">
+            <a href="tel:+110001111111" class="contact link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -57,135 +57,133 @@
       <section class="filter">
         <h1 class="main-head">Privileges</h1>
         <ul class="button list">
-          <li class="btn list">
+          <li class="btn-list">
             <button type="button" class="secondary-btn">All</button>
           </li>
-          <li class="btn list">
+          <li class="btn-list">
             <button type="button" class="secondary-btn">Web Site</button>
           </li>
-          <li class="btn list">
+          <li class="btn-list">
             <button type="button" class="secondary-btn">App</button>
           </li>
-          <li class="btn list">
+          <li class="btn-list">
             <button type="button" class="secondary-btn">Design</button>
           </li>
-          <li class="btn list">
+          <li class="btn-list">
             <button type="button" class="secondary-btn">Marketing</button>
           </li>
         </ul>
         <ul class="Privileges list">
           <li class="privileges-link link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/banking.jpg"
                 alt="application-interface"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">
+              <h2 class="privileges-head main-head">
                 Banking App Interface Concept
               </h2>
-              <p class="priviliges-text adv-text">App</p>
+              <p class="priviliges-text main-text">App</p>
             </a>
           </li>
           <li class="privileges-list link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/cashless.jpg"
                 alt="cashless-payment"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">Cashless Payment</h2>
-              <p class="priviliges-text adv-text">Marketing</p>
+              <h2 class="privileges-head main-head">Cashless Payment</h2>
+              <p class="priviliges-text main-text">Marketing</p>
             </a>
           </li>
           <li class="privileges-list link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/app.jpg"
                 alt="laptop-with-open-app"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">Meditation App</h2>
-              <p class="priviliges-text adv-text">App</p>
+              <h2 class="privileges-head main-head">Meditation App</h2>
+              <p class="priviliges-text main-text">App</p>
             </a>
           </li>
           <li class="privileges-list link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/taxi.jpg"
                 alt="man-handling-the-wheel"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">Taxi Service</h2>
-              <p class="priviliges-text adv-text">Marketing</p>
+              <h2 class="privileges-head main-head">Taxi Service</h2>
+              <p class="priviliges-text main-text">Marketing</p>
             </a>
           </li>
           <li class="privileges-list link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/screen.jpg"
                 alt="screen-illustrations"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">
-                Screen Illustrations
-              </h2>
-              <p class="priviliges-text adv-text">Design</p>
+              <h2 class="privileges-head main-head">Screen Illustrations</h2>
+              <p class="priviliges-text main-text">Design</p>
             </a>
           </li>
           <li class="privileges-list link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/online.jpg"
                 alt="girl-using-a-phone"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">Online Courses</h2>
-              <p class="priviliges-text adv-text">Marketing</p>
+              <h2 class="privileges-head main-head">Online Courses</h2>
+              <p class="priviliges-text main-text">Marketing</p>
             </a>
           </li>
           <li class="privileges-list link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/instagram.jpg"
                 alt="instagram-stories"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">
+              <h2 class="privileges-head main-head">
                 Instagram Stories Concept
               </h2>
-              <p class="priviliges-text adv-text">Design</p>
+              <p class="priviliges-text main-text">Design</p>
             </a>
           </li>
           <li class="privileges-list link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/food.jpg"
                 alt="girl-carring-a-bag-with-food"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">Organic Food</h2>
-              <p class="priviliges-text adv-text">Web Site</p>
+              <h2 class="privileges-head main-head">Organic Food</h2>
+              <p class="priviliges-text main-text">Web Site</p>
             </a>
           </li>
           <li class="privileges-list link">
-            <a href="" class="link">
+            <a href="" class="priv link">
               <img
                 src="./images/coffee.jpg"
                 alt="man-making-a-coffee"
                 width="360"
                 height="300"
               />
-              <h2 class="privileges-head adv-first-head">Fresh Coffee</h2>
-              <p class="priviliges-text adv-text">Web Site</p>
+              <h2 class="privileges-head main-head">Fresh Coffee</h2>
+              <p class="priviliges-text main-text">Web Site</p>
             </a>
           </li>
         </ul>
